--- a/muffinJump.html
+++ b/muffinJump.html
@@ -9,6 +9,9 @@
     <script src="TextVariables.js"></script>
     <script src="CameraGuider.js"></script>
     <script src="KeyGuider.js"></script>
+    <script src="PausePanel.js"></script>
+    <script src="MuffinStateManager.js"></script>
+
 </head>
 
 <body>
@@ -16,6 +19,7 @@
     <div id="game"></div>
 
     <script>
+        var paused = true;
         var game = new Phaser.Game(640, 480, Phaser.CANVAS, 'game');
 
         var muffinPos;
@@ -36,12 +40,16 @@
         var objectsFactory;
         var textVariables;
         var keyGuider;
+        var stateManager;
+        var pausePanel;
+        var btnPause;
+        var btnPlay;
 
         PhaserGame.prototype = {
             init: function () {
 
                 this.game.renderer.renderSession.roundPixels = true;
-                this.world.resize(640, 2000);
+                this.world.resize(640, 10000);
                 this.physics.startSystem(Phaser.Physics.ARCADE);
                 this.physics.arcade.gravity.y = 750;
                 this.physics.arcade.skipQuadTree = false;
@@ -53,25 +61,53 @@
                 this.load.image('clouds', 'assets/clouds.png');
                 this.load.image('step', 'assets/step.png');
                 this.load.image('ice', 'assets/ice.png');
+                this.load.spritesheet('btnPause', 'assets/btnPause.png', 20, 20);
+                this.load.spritesheet('btnPlay', 'assets/btnPlay.png', 58, 59);
+                this.load.image('panel', 'assets/panel.png');
             },
             create: function () {
-                this.stage.backgroundColor = '#2f9acc';
+                //                this.stage.backgroundColor = '#2f9acc';
                 this.background = this.add.tileSprite(0, 0, 640, 480, 'clouds');
                 this.background.fixedToCamera = true;
-                this.add.sprite(0, 1906, 'trees');
+                this.add.sprite(0, 9920, 'trees');
+
+                this.camera.y = 9802;
+
+                this.add.button(200, 200, 'btnPlay', this.onUp, this, 0, 0);
 
                 objectsFactory = new ObjectsFactory(this);
                 textVariables = new TextVariables(this);
                 keyGuider = new KeyGuider(this);
+
+                stateManager = new MuffinStateManager(this);
+                //pausePanel = new PausePanel(this);
+                //  this.game.add.existing(pausePanel);
+                // btnPause = this.game.add.button(20, 20, 'btnPause', this.pauseGame, this);
+
+                // Let's build a pause panel
+
+                // this.game.add.existing(pausePanel);
+
+
             },
 
             update: function () {
                 objectsFactory.updateObjects(this);
                 textVariables.updateText(this);
                 keyGuider.updateKeys(this);
+            },
+
+            onUp: function (button, pointer, isOver) {
+
+                if (isOver) {
+                    console.log("nosiema");
+                }
             }
         };
+
+
         game.state.add('Game', PhaserGame, true);
+        game.state.start('Game');
     </script>
 
 </body>
